# Titan

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
client/: terminal_client.cpp
client/src/: game_client.cpp  game_client.h  main.cpp  renderer.cpp  renderer.h  terminal_tank.cpp
config/: server.json
docs/: architecture.md  new_talk.md  replay.md
examples/common/: CMakeLists.txt
examples/common/scene/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
examples/gateway/: CMakeLists.txt  main.cpp
examples/tank_battle/: CMakeLists.txt  battle_scene.cpp  battle_scene.h  bullet.cpp  bullet.h  main.cpp  tank.cpp  tank.h
include/gs/actor/: actor.h  actor_system.h  mailbox.h  peer_manager.h
include/gs/aoi/: aoi_entity.h  aoi_grid.h  aoi_world.h  i_aoi.h
include/gs/common/: config.h  logger.h  types.h
include/gs/debug/: capture.h  recorder.h  snapshot.h  trace_event.h
include/gs/entity/: entity.h  npc.h  player.h
include/gs/net/: channel.h  connection_manager.h  i_connection.h  i_peer.h  i_server.h  message.h  net_subsystem.h  net_sync_actor.h  recv_buffer.h  tcp_connection.h  tcp_peer.h  tcp_server.h
include/gs/net/actor/: net_sync.h
include/gs/net/mock/: connection.h
include/gs/net/protocol/: fwd.h  session.h  session_manager.h
include/gs/net/tcp/: connection.h  server.h
include/gs/scene/: scene.h  scene_manager.h
include/gs/server/: titan_server.h
include/gs/tick/: tick_manager.h
scripts/: run_demo.sh
src/gs/: main.cpp
src/gs/actor/: actor.cpp  actor_system.cpp  mailbox.cpp  peer_manager.cpp
src/gs/aoi/: aoi_entity.cpp  aoi_grid.cpp  aoi_world.cpp
src/gs/common/: logger.cpp
src/gs/debug/: recorder.cpp  snapshot.cpp
src/gs/entity/: entity.cpp  npc.cpp  player.cpp
src/gs/net/: channel.cpp  connection_manager.cpp  message.cpp  net_subsystem.cpp  net_sync_actor.cpp  tcp_connection.cpp  tcp_peer.cpp  tcp_server.cpp
src/gs/net/actor/: net_sync.cpp
src/gs/net/mock/: connection.cpp
src/gs/net/protocol/: session.cpp  session_manager.cpp
src/gs/net/tcp/: connection.cpp  peer.cpp  server.cpp
src/gs/scene/: scene.cpp  scene_manager.cpp
src/gs/server/: titan_server.cpp
src/gs/tick/: tick_manager.cpp
tests/: CMakeLists.txt  main.cpp
tests/manual/: tank_test_client.cpp
tests/replay/: deterministic_replay.test.cpp
tests/unit/: mailbox.test.cpp  mock_connection.test.cpp  recorder.test.cpp  recv_buffer.test.cpp  snapshot.test.cpp  timing_wheel.test.cpp
